--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,5 @@
 
-div.saludo {
-	background: green;
-	
-}
+
 
 body {
 	background: cyan;
@@ -10,6 +7,14 @@ body {
 
 h1{
 	text-align: center;
+	text-decoration: underline;
+}
+
+.saludo {
+	width: 1000px;
+	height: 230px;
+	margin: auto;
+	margin-bottom: 20px;
 }
 
 .boton{
@@ -26,14 +31,11 @@ h1{
 	background: #e0e0e0;
 	cursor: pointer;
 }
-
-.clearboth{
-	clear: both;
-}			
+		
 			
 #Comedores{
 	width: 1000px;
-	height: 420px;
+	height: 490px;
 	margin: auto;
 	margin-bottom: 20px;
 }
@@ -46,7 +48,7 @@ h1{
 	float: left;
 	border: solid 2px #888;
 	width: 260px;
-	height: 230px;
+	height: 300px;
 	margin: 14px;
 	padding: 20px;
 	text-align: center;
@@ -82,7 +84,7 @@ h1{
 
 #Reservas{
 	width: 1000px;
-	height: 250px;
+	height: 240px;
 	margin: auto;
 	margin-bottom: 20px;
 }
@@ -95,10 +97,11 @@ h1{
 }
 
 a.sub{
-text-decoration: underline;
+	text-decoration: underline;
 }
 
 footer{
+	margin-top: 1em;
 	margin-bottom: 1em;
 	border-top: solid 1px #fff;
 	text-align: center;
