--- a/css/estilos.css
+++ b/css/estilos.css
@@ -95,7 +95,15 @@ h1{
 
 #Contacto{
 	width: 1000px;
-	height: 300px;
+	height: 320px;
+	margin: auto;
+	margin-bottom: 20px;
+}
+
+#Contacto .minimapa{
+	float: right;
+	width: 1000px;
+	height: 375px;
 	margin: auto;
 	margin-bottom: 20px;
 }
